--- a/src/components/TabMovies/TabMovies.css
+++ b/src/components/TabMovies/TabMovies.css
@@ -1,7 +1,10 @@
 .TabMovies {
   /* box-sizing: border-box; */
-  background-color: #090a0e;
+  background-color: #0f1014;
   color: #eaf523;
+}
+.TabMovies h5 {
+  color: #ccc
 }
 
 .mani-center-max-size {
@@ -32,8 +35,9 @@
   width: 80%;
 }
 
-.mani-h1 {
-  font-size: 92px;
+.TabMovies h1 {
+  color:#f3f305c4;
+  font-size: 5rem;
   margin-top: 0;
   line-height: 1;
   margin-bottom: 10px;
@@ -56,14 +60,14 @@
   outline: none;
   padding: 10px 15px;
   cursor: pointer;
-  transition: box-shadow 0mani-2s;
+  transition: box-shadow 0.2s;
   text-transform: uppercase;
   letter-spacing: 2px;
   border: 1px solid rgb(243, 243, 5);
 }
 
 .mani-button:hover {
-  box-shadow: 0 5px 5px rgba(0, 0, 0, 0mani-5);
+  box-shadow: 0 5px 5px rgba(0, 0, 0, 0, 0.5);
 }
 
 .mani-close-video {
